@@ -1,3 +1,13 @@
+2005-09-02  Miguel de Icaza  <miguel@novell.com>
+
+	* gtk/Application.cs (Invoke): Add new overloads to easily invoke
+	methods on the executing thread.
+
+2005-09-01  Miguel de Icaza  <miguel@novell.com>
+
+	* gtk/Application.cs (Invoke): Add sugar to invoke a method on the
+	main thread.
+
 2005-09-02  Ben Maurer  <bmaurer@ximian.com>
 
 	* sample/NodeViewDemo.cs: take advantage of the stuff below
